--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -29,7 +29,7 @@ jobs:
           # Built distribution (wheel)
           python setup.py --hide-listing bdist_wheel $<SETUP_BDIST_WHEEL_ARGS> -- $<SETUP_CMAKE_ARGS> -- $<SETUP_MAKE_ARGS>
           # Cleanup
-          echo "import glob, os\n
+          echo "import glob, os
           if os.environ.get('UPLOAD_SDIST', '') == '':
               sdist=(glob.glob('dist/*.tar.gz') + glob.glob('dist/*.zip'))[0]
               print('Deleting [%s]' % sdist)
