--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["windows-2016"]
+        os: ["windows-2016", "macos-10.15"]
         python: ["2.7", "3.7"]
     steps:
       - uses: actions/checkout@v2
